# ds-build

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEEPSEEK.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES  bump-and-install.sh  clippy.toml  config.example.toml
crates/codegen/ds-agent/: Cargo.toml  README.md
crates/codegen/ds-agent/scripts/: encrypt_templates.py
crates/codegen/ds-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/ds-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/ds-announcements/: Cargo.toml  generate.sh
crates/codegen/ds-announcements/src/: lib.rs
crates/codegen/ds-auth/: Cargo.toml
crates/codegen/ds-auth/src/: auth_provider.rs  lib.rs  retry_middleware.rs  visibility.rs
crates/codegen/ds-chat-state/: Cargo.toml
crates/codegen/ds-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  headroom.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/ds-config/: Cargo.toml
crates/codegen/ds-config-types/: Cargo.toml
crates/codegen/ds-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/ds-config/src/: lib.rs  loader.rs  macos_managed.rs  managed_cache.rs  paths.rs  shell.rs  signed_policy.rs  validation.rs
crates/codegen/ds-env/: Cargo.toml
crates/codegen/ds-env/src/: lib.rs
crates/codegen/ds-file-utils/: Cargo.toml
crates/codegen/ds-file-utils/src/: circuit_breaker_observer.rs  gcs.rs  lib.rs  queue.rs  s3.rs  storage_client.rs  storage_client_breaker_tests.rs  workspace_classifier.rs
crates/codegen/ds-headroom/: Cargo.toml
crates/codegen/ds-headroom/src/: lib.rs
crates/codegen/ds-http/: Cargo.toml
crates/codegen/ds-http/src/: lib.rs
crates/codegen/ds-memory/: Cargo.toml
crates/codegen/ds-memory/src/: backend.rs  chunker.rs  dream.rs  embedding.rs  index.rs  lib.rs  mmr.rs  schema.rs  search.rs  storage.rs  watcher.rs
crates/codegen/ds-mixpanel/: Cargo.toml
crates/codegen/ds-mixpanel/src/: lib.rs
crates/codegen/ds-models/: Cargo.toml  default_models.json
crates/codegen/ds-models/src/: lib.rs
crates/codegen/ds-pager-minimal/: Cargo.toml
crates/codegen/ds-pager-minimal/src/: auth.rs  commit.rs  full_view.rs  lib.rs  live.rs  overlay.rs  panel.rs  plan.rs  todo.rs  welcome.rs
crates/codegen/ds-paths/: Cargo.toml
crates/codegen/ds-plugin-marketplace/: Cargo.toml
crates/codegen/ds-plugin-marketplace/src/: catalog.rs  config.rs  git.rs  index.rs  install_resolve.rs  installer.rs  lib.rs  matcher.rs  scanner.rs  types.rs
crates/codegen/ds-prompt-queue/: Cargo.toml
crates/codegen/ds-prompt-queue/src/: lib.rs  types.rs
crates/codegen/ds-sampling-types/: Cargo.toml
crates/codegen/ds-sampling-types/src/: conversation.rs  doom_loop.rs  error.rs  lib.rs  types.rs
crates/codegen/ds-secrets/: Cargo.toml
crates/codegen/ds-secrets/src/: sanitizer.rs
crates/codegen/ds-shell/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/ds-shell-session-support/: Cargo.toml
crates/codegen/ds-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/ds-shell/benches/: session_list.rs
crates/codegen/ds-shell/changelogs/: 0.2.100.json  0.2.100.md  0.2.101.json  0.2.101.md  0.2.16.json  0.2.16.md  0.2.17.json  0.2.17.md  0.2.18.json  0.2.18.md  0.2.26.json  0.2.26.md  0.2.3.json  0.2.3.md  0.2.34.json  0.2.34.md  0.2.37.json  0.2.37.md  0.2.4.json  0.2.4.md  0.2.40.json  0.2.40.md  0.2.43.json  0.2.43.md  0.2.45.json  0.2.45.md  0.2.46.json  0.2.46.md  0.2.49.json  0.2.49.md  0.2.50.json  0.2.50.md  0.2.51.json  0.2.51.md  0.2.52.json  0.2.52.md  0.2.55.json  0.2.55.md  0.2.56.json  0.2.56.md  (+52 more)
crates/codegen/ds-shell/src/: active_sessions.rs  builtin.rs  bundle.rs  claude_import.rs  claude_import_state.rs  cli_models.rs  instrumentation.rs  lib.rs  managed_config.rs  mcp_doctor.rs  plugin.rs  tier.rs
crates/codegen/ds-shell/tests/: git_contention_e2e.rs  sandbox_requirements_pin.rs  session_load_perf.rs  signed_managed_config.rs  signed_managed_config_extended.rs  team_managed_config.rs  test_active_sessions_smoke.rs  test_agent_type_invariant.rs  test_built_binary_e2e.rs  test_config_update_isolation.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_doomloop_capture.rs  test_ds_session_update.rs  test_fork_session.rs  test_global_extra_headers_e2e.rs  test_heap_profile_monitor.rs  test_leader_death_repro.rs  test_leader_soak.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_integration.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_sampling_client.rs  test_settings_refresh.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs  trace_replay.rs
crates/codegen/ds-subagent-resolution/: Cargo.toml
crates/codegen/ds-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/ds-tools-api/: Cargo.toml  build.rs
crates/codegen/ds-tools-api/proto/: ds-tools.proto
crates/codegen/ds-tools-api/src/: config_validation.rs  lib.rs  slash_commands.rs
crates/codegen/ds-tools-api/tests/: wire_shape.rs
crates/codegen/ds-workspace/: Cargo.toml
crates/codegen/ds-workspace-client/: Cargo.toml
crates/codegen/ds-workspace-client/src/: lib.rs
crates/codegen/ds-workspace/src/: activity.rs  capability.rs  config.rs  daemonize.rs  diag_server.rs  discovery.rs  envrc.rs  error.rs  folder_trust.rs  fs_notify.rs  handle.rs  hub.rs  hub_auth.rs  hub_channel.rs  hub_ids.rs  hub_server.rs  lib.rs  mcp.rs  preview_supervisor.rs  project_config.rs  recovery.rs  rpc_envelope.rs  status_config.rs  trust.rs  workspace_ops.rs
crates/common/ds-compaction/: Cargo.toml
crates/common/ds-computer-hub-core/: Cargo.toml
crates/common/ds-computer-hub-mcp-adapter/: Cargo.toml
crates/common/ds-computer-hub-sdk/: Cargo.toml
crates/common/ds-tool-protocol/: Cargo.toml
(+1478 files in other folders)
