[package]
license = "Apache-2.0"
name = "ds-agent"
version = "0.1.17"
edition.workspace = true
description = "Agent builder, definition parsing, and system prompt assembly"

[dependencies]
dunce = { workspace = true }
ds-hooks = { path = "../ds-hooks" }
ds-sampling-types = { path = "../ds-sampling-types" }
ds-tools = { path = "../ds-tools" }
ds-token-estimation = { workspace = true }
minijinja = { version = "2", features = ["custom_syntax"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tracing = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
dirs = "6"
ds-config = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
zeroize = "1"
ds-tool-types.workspace = true

[features]
default = []
default-bazel = []

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
