[package]
license = "Apache-2.0"
name = "ds-chat-state"
version = "0.1.4"
edition.workspace = true
description = "Actor-based chat state management for DeepSeek agents"

[features]
default-bazel = []

[dependencies]
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
ds-compaction = { path = "../../common/ds-compaction" }
ds-headroom = { path = "../ds-headroom" }
ds-sampling-types = { path = "../ds-sampling-types" }
ds-token-estimation = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
