[package]
license = "Apache-2.0"
name = "ds-config-types"
version = "0.1.3"
edition.workspace = true
description = "Leaf configuration value types for the DS CLI, extracted from ds-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
ds-announcements = { workspace = true }
ds-config = { workspace = true }
ds-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
