[package]
license = "Apache-2.0"
name = "ds-config"
version = "0.1.0"
edition.workspace = true
description = "Shared config loading for DS — ds_home, effective config (requirements > user > managed), TOML merge"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
dunce = { workspace = true }
# Shared signed deployment-config envelope contract with the cli-chat-proxy signer.
ds-cli-proxy-types = { path = "../../../prod/mc/cli-proxy-types" }
ring = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = "3.1"
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
which = { workspace = true }
ds-tty-utils = { workspace = true }
ds-version = { workspace = true }

# core-foundation: read macOS MDM managed preferences (`ai.ds.cli`) for the
# admin-deployed requirements layer.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]

[lints]
workspace = true