[package]
license = "Apache-2.0"
name = "ds-http"
version = "0.1.20"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the DS CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ds-auth = { workspace = true, features = ["middleware"] }
ds-sampler = { path = "../ds-sampler" }
ds-telemetry = { workspace = true }
ds-version = { workspace = true }
ds-workspace = { workspace = true }

[lints]
workspace = true
