[package]
license = "Apache-2.0"
name = "ds-memory"
version = "0.1.20"
edition.workspace = true

[features]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
dunce = { workspace = true }
flate2 = { workspace = true }
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
] }
notify = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
# rusqlite 0.37 + bundled = self-contained SQLite (>= 3.50.2) with FTS5.
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = { workspace = true }
# sqlite-vec: vec0 virtual table for KNN vector search.
sqlite-vec = "=0.1.7-alpha.2"
tar = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = { workspace = true }
ds-auth = { workspace = true }
ds-config-types = { workspace = true }
ds-http = { workspace = true }
ds-telemetry = { workspace = true }
ds-tools = { workspace = true }
ds-version = { workspace = true }
ds-sqlite-journal = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
