[package]
license = "Apache-2.0"
name = "ds-mixpanel"
version = "0.1.14"
edition.workspace = true
description = "Lightweight Mixpanel HTTP tracking client (replaces mixpanel-rs to avoid pulling reqwest 0.11)"

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
ds-secrets = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
