[package]
name = "ds-pager-minimal"
version = "0.1.35"
edition.workspace = true
license = "Apache-2.0"
authors = ["DeepSeek"]

# `ds-ratatui-inline` is reached only through the pager's re-exported
# `PagerTerminal` type (its `insert_before` / viewport methods), so this crate
# never names the crate in code — only in intra-doc links. cargo-shear can't see
# doc links, so keep it ignored rather than dropping the dep (which would break
# those links).
[package.metadata.cargo-shear]
ignored = ["ds-ratatui-inline"]

[dependencies]
# The pager crate whose view-model (AppView / views / scrollback) this render
# mode reads. NOTE: the dependency only points this way — `ds-pager` must
# NOT depend on this crate (that would be a cargo cycle). The pager invokes this
# crate via the `ds_pager::minimal_hook` fn-pointer seam, installed by the
# composition-root binary; see `install()`.
ds-pager = { path = "../ds-pager" }

# Rendering primitives (must match the pager's versions).
ratatui = { workspace = true, features = ["crossterm", "unstable-widget-ref"] }
crossterm = { workspace = true, features = ["event-stream", "bracketed-paste"] }
# Transcript temp-file names (`ds-transcript-<uuid>.ansi`).
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }

# Native scrollback / inline viewport engine (`insert_before`, viewport sizing).
# Used only via the pager's re-exported `PagerTerminal`; see the
# `[package.metadata.cargo-shear]` note above.
ds-ratatui-inline = { workspace = true }

# Misc used by the commit/live/full-view paths.
chrono = { workspace = true }
similar = { workspace = true }
ds-shell = { workspace = true }
ds-version = { workspace = true }
ds-token-estimation = { workspace = true }

[dev-dependencies]
# The unit tests reuse the pager's test-only view-model constructors
# (`test_agent_view`, yolo/auto setters), gated behind its test-only
# helpers.
ds-pager = { path = "../ds-pager", features = ["test-support"] }

[features]
