[package]
license = "Apache-2.0"
edition.workspace = true
name = "ds-paths"
version = "0.1.20"
description = "Type-safe path wrappers for absolute and relative UTF-8 paths"

[dependencies]
camino = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
