[package]
license = "Apache-2.0"
name = "ds-plugin-marketplace"
version = "0.1.32"
edition.workspace = true

[dependencies]
dirs = { workspace = true }
dunce = { workspace = true }
fs2 = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ds-tty-utils = { workspace = true }
ds-agent = { workspace = true }
ds-config = { workspace = true }
ds-hooks-plugins-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
