[package]
edition.workspace = true
license = "Apache-2.0"
name = "ds-prompt-queue"
version = "0.1.4"
description = "Shared prompt-queue wire types for ds-shell and ds-pager"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
