[package]
license = "Apache-2.0"
name = "ds-sampling-types"
version = "0.1.18"
edition.workspace = true
description = "Pure data types for the DeepSeek sampling / chat-completion API layer"

[dependencies]
async-openai = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tracing = { workspace = true }
ds-compaction = { path = "../../common/ds-compaction" }
ds-tools = { path = "../ds-tools" }

[dev-dependencies]
assert_matches = { workspace = true }

[lints]
workspace = true
