[package]
license = "Apache-2.0"
edition.workspace = true
name = "ds-secrets"
version = "0.1.29"
description = "Regex sanitizer for DS Build outbound data (Sentry / Mixpanel / product-event scrubbing)"

[dependencies]
regex = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
