[package]
license = "Apache-2.0"
name = "ds-shell-session-support"
version = "0.1.7"
edition.workspace = true
description = "Session-support modules for the ds shell crate family: managed MCP credential/catalog caching and file-access tracking."

[dependencies]
agent-client-protocol = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
ds-file-utils = { path = "../ds-file-utils", optional = true }
ds-http = { workspace = true }
ds-shell-base = { workspace = true }
ds-version = { workspace = true }
ds-workspace = { workspace = true }

[features]
default-bazel = []

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }

[lints]
workspace = true
