[package]
license = "Apache-2.0"
name = "ds-shell"
version = "0.1.6"
edition.workspace = true

[features]
default = []
unstable = []
default-bazel = [
    ]

[dependencies]
dunce = { workspace = true }
tonic-prost = { workspace = true, optional = true }
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
ds-announcements = { workspace = true }
ds-prompt-queue = { workspace = true }
ds-version = { workspace = true }

async-openai = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bm25 = "2.3"
bytes = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
ignore = { workspace = true }
jsonschema = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
kanal = "0.1"
regex = { workspace = true }
# rmcp 2.1 + reqwest 0.13 are quarantined inside `ds-mcp`. The remaining
# MCP code in this crate (extensions/mcp.rs, mcp_doctor.rs) reaches rmcp model
# types via `ds_mcp::rmcp::model::*`. reqwest 0.13 is a private impl
# detail of ds-mcp::servers; shell never sees it. Every HTTP call site
# in this crate uses workspace reqwest 0.12.
ds-mcp = { workspace = true }
reqwest = { workspace = true, features = ["stream", "blocking"] }
reqwest-middleware = { workspace = true }
# rusqlite 0.37 + bundled = self-contained SQLite (>= 3.50.2) with FTS5.
# Bumped from 0.32 to resolve CVE-2025-29087, CVE-2025-3277, CVE-2025-6965.
# sqlite-vec is C ABI, not Rust-version dependent — any rusqlite with `bundled` works.
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_ignored = "0.1"
serde_json = { workspace = true, features = ["preserve_order"] }
similar = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
dirs = "6"
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
toml = { workspace = true, features = ["preserve_order"] }
toml_edit = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "process",
    "rt",
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
    "time",
] }
obfstr = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tokio-retry = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "v7"] }
ds-acp-lib = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
backon = { workspace = true }
webbrowser = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "logging",
    "tls12",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rustls-native-certs = "0.8"
futures-util = { workspace = true }
urlencoding = { workspace = true }
gethostname = { workspace = true }
gcloud-storage = { workspace = true }
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
nucleo = { workspace = true }
arc-swap = { workspace = true }
infer = "0.15"
image = { workspace = true, features = ["png", "jpeg", "gif", "webp"] }
moka = { workspace = true, features = ["future"] }
base64 = { workspace = true }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = { workspace = true }
rand = { workspace = true }
shlex = { workspace = true }
strum = { workspace = true }
ds-fast-worktree = { path = "../ds-fast-worktree", features = ["metadata"] }

tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
ds-paths = { path = "../ds-paths" }
ds-shell-base = { workspace = true }
ds-shell-session-support = { workspace = true }
ds-shared = { workspace = true }
ds-tracing-macros = { path = "../ds-tracing-macros" }
ds-fsnotify = { path = "../ds-fsnotify" }
ds-codebase-graph = { path = "../ds-codebase-graph" }
ds-hunk-tracker = { path = "../ds-hunk-tracker" }
ds-agent-lifecycle = { workspace = true }
ds-interjection-core = { workspace = true }
ds-sandbox = { path = "../ds-sandbox", default-features = false }
ds-chat-state = { path = "../ds-chat-state" }
ds-headroom = { path = "../ds-headroom" }
ds-compaction = { path = "../../common/ds-compaction" }
ds-sampler = { path = "../ds-sampler" }
ds-sqlite-journal = { workspace = true }
ds-token-estimation = { workspace = true }
ds-sampling-types = { path = "../ds-sampling-types" }
ds-tools = { path = "../ds-tools" }
ds-tty-utils = { workspace = true }
ds-system-power = { workspace = true }
ds-workspace = { workspace = true }
ds-subagent-resolution = { path = "../ds-subagent-resolution" }
ds-agent = { path = "../ds-agent" }
ds-config = { workspace = true }
ds-config-types = { workspace = true }
ds-memory = { workspace = true }
ds-hooks = { path = "../ds-hooks" }
ds-hooks-plugins-types = { path = "../ds-hooks-plugins-types" }
ds-plugin-marketplace = { path = "../ds-plugin-marketplace" }
ds-file-utils = { path = "../ds-file-utils" }
ds-auth = { workspace = true, features = ["middleware"] }
ds-telemetry = { workspace = true }
ds-http = { workspace = true }
ds-models = { workspace = true }
ds-cli-proxy-types = { path = "../../../prod/mc/cli-proxy-types" }
flate2 = { workspace = true }
fs2 = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
tdigests = "1.0"
semver = { workspace = true }
process-wrap = { version = "9.0.0", features = ["tokio1", "job-object", "creation-flags"] }
portable-pty = "0.9"
parking_lot.workspace = true
dashmap.workspace = true

# Used by acp_session.rs and mcp_servers.rs for the unified
# ds_tool_runtime::Tool dispatch model and the computer-hub MCP adapter.
ds-computer-hub-sdk = { workspace = true }
ds-tool-runtime = { workspace = true }
ds-tool-protocol = { workspace = true }
ds-tool-types = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
siphasher = { workspace = true }
windows = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
filetime = { workspace = true }
tempfile = { workspace = true }
ds-memory = { workspace = true, features = [] }
ds-workspace = { workspace = true, features = [] }
# Feature-unification applies the signing seam to the lib when building tests, so
# integration tests can inject a throwaway trusted key; production builds exclude
# dev-deps and compile the seam out.
ds-config = { workspace = true, features = [] }
# Ed25519 signing for the managed-config signature tests.
ring = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
rsa = { workspace = true }
semver = { workspace = true }
serial_test = { workspace = true }
# Test-only builds expose `env::EnvVarGuard` and the cpu_profile test seams to
# this crate's test targets.
ds-shell-base = { workspace = true, features = [] }
ds-test-support = { workspace = true, features = [] }
ds-test-utils = { workspace = true }
# `test-util` enables `#[tokio::test(start_paused = true)]` (paused virtual
# clock with auto-advance) so interval-driven loop tests in `auth::refresh`
# can assert exact tick counts deterministically without real-time sleep.
tokio = { workspace = true, features = ["test-util"] }

[dependencies.tempfile]
workspace = true

[[bench]]
name = "session_list"
harness = false

[lints]
workspace = true
[build-dependencies]
# build.rs only downloads ripgrep — no rmcp involvement. Workspace reqwest
# (0.12) is plenty.
reqwest = { workspace = true, features = ["blocking"] }
flate2 = { workspace = true }
tar = { workspace = true }
[[bin]]
name = "chat-history-downgrade"
path = "src/bin/chat-history-downgrade.rs"
