[package]
license = "Apache-2.0"
name = "ds-subagent-resolution"
version = "0.1.36"
edition.workspace = true
description = "Subagent configuration resolution: merges persona, role, and spawn-time overrides into a resolved spec"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ds-sampling-types = { path = "../ds-sampling-types" }
ds-tools = { path = "../ds-tools" }
ds-tool-types.workspace = true
# TODO(phase2): add these when resolve_subagent_spec() composition is implemented:
# ds-agent = { path = "../ds-agent" }  # AgentDefinition lookup
# ds-fast-worktree = { path = "../ds-fast-worktree" }  # worktree creation

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
