[package]
license = "Apache-2.0"
name = "ds-tools-api"
version = "0.1.28"
edition.workspace = true
description = "Protobuf API definitions for DS tools"

[dependencies]
tonic-prost = { workspace = true }
# Protobuf runtime
prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
ds-tool-protocol = { workspace = true }

[build-dependencies]
ds-proto-build = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde", "tonic"]

[lints]
workspace = true
