[package]
license = "Apache-2.0"
name = "ds-workspace-client"
version = "0.1.38"
edition.workspace = true
description = "Lightweight typed client for hub-proxied workspace.* RPCs (shared by ds-shell proxy mode and other consumers)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
ds-computer-hub-sdk = { workspace = true }
ds-workspace-types = { workspace = true }
ds-tool-protocol = { workspace = true }
ds-tool-runtime = { workspace = true }

[features]
default = []
default-bazel = []
[dev-dependencies]
schemars = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
ds-tool-types = { workspace = true }

[lints]
workspace = true
