[package]
license = "Apache-2.0"
name = "ds-workspace"
version = "0.1.38"
edition.workspace = true
description = "Core host-local workspace library (FS, VCS, execution, discovery) for ds-shell and remote sampler"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
# Diagnostics HTTP server (in-guest readiness/status endpoint); pinned to the
# workspace version already used by the sibling preview proxy.
axum = { workspace = true }
dunce = { workspace = true }
ds-version = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true }
dirs = "6"
parking_lot = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
ignore = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "v7"] }
ds-agent = { path = "../ds-agent" }
ds-tools = { path = "../ds-tools" }
ds-tools-api = { path = "../ds-tools-api" }
ds-workspace-client = { path = "../ds-workspace-client" }
ds-workspace-types = { path = "../ds-workspace-types" }
ds-config = { workspace = true }
# Leaf config value types (RemoteSettings, BoolFlag) for the folder-trust decision.
ds-config-types = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
dashmap = { workspace = true }
agent-client-protocol = { workspace = true }
ds-acp-lib = { workspace = true }
ds-codebase-graph = { path = "../ds-codebase-graph" }
ds-paths = { path = "../ds-paths" }
base64 = { workspace = true }
infer = { workspace = true }
sha2 = { workspace = true, features = ["force-soft"] }
bstr = "1.12.1"
hashbrown = "0.16.1"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"
nucleo = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
chrono = { workspace = true }
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
url = { workspace = true }
ds-env = { workspace = true }
humantime-serde = { workspace = true }
prometheus = { workspace = true }
glob = "0.3"
ds-sandbox = { path = "../ds-sandbox", default-features = false }
ds-hooks = { path = "../ds-hooks" }
ds-hunk-tracker = { path = "../ds-hunk-tracker" }
# `metrics` enables the SDK's metric-donation client (periodic Prometheus
# registry gather → OTLP → hub donation pump); see metric_donation_reporter.
ds-computer-hub-sdk = { workspace = true, features = ["metrics"] }
ds-computer-hub-mcp-adapter = { path = "../../common/ds-computer-hub-mcp-adapter" }
ds-mcp = { path = "../ds-mcp" }
ds-file-utils = { path = "../ds-file-utils" }
ds-auth = { path = "../ds-auth" }
ds-telemetry = { workspace = true }
ds-tty-utils = { workspace = true }
ds-sqlite-journal = { workspace = true }
reqwest = { workspace = true }
ds-tool-protocol = { workspace = true }
ds-tool-runtime = { workspace = true }
ds-tool-types = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
urlencoding = "2"
ds-fast-worktree = { path = "../ds-fast-worktree", features = ["metadata"] }
# tonic stays for `tonic::Status`/`Code` mapping in workspace_ops deploy errors.
tonic = { workspace = true }

ds-fsnotify = { path = "../ds-fsnotify" }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
# "enable" required for the SDK's spans to record at all.
fastrace = { workspace = true, features = ["enable"] }
ds-tracing = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tempfile = { workspace = true }
zstd = { workspace = true }

# Only referenced by the Unix self-daemonize path (fork/setsid/dup2/chdir).
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Only referenced by the Windows self-daemonize path (SetStdHandle).
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[[bin]]
name = "ds-workspace-server"
path = "src/bin/workspace_server.rs"

[[bin]]
name = "workspace-server-probe"
path = "src/bin/workspace_server_probe.rs"

[features]
default = ["sandbox-enforce"]
compression = []
sandbox-enforce = ["ds-sandbox/enforce"]
default-bazel = [
    "sandbox-enforce",
    ]

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
ds-test-utils = { path = "../../common/ds-test-utils" }
# Decode tar.gz archives produced by workspace upload helpers in tests.
flate2 = { workspace = true }
tar = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["tokio-tungstenite"]

[lints]
workspace = true
