[package]
license = "Apache-2.0"
name = "ds-computer-hub-mcp-adapter"
version = "0.1.13"
edition.workspace = true
description = "Bridge between MCP servers and the DeepSeek Computer Hub, registering MCP-discovered tools as native hub tools."

[features]
metrics = ["dep:prometheus"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }

ds-tool-protocol = { workspace = true }
ds-tool-runtime = { workspace = true }
ds-tool-types = { workspace = true }
ds-computer-hub-sdk = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }

[lints]
workspace = true
