[package]
license = "Apache-2.0"
name = "ds-computer-hub-sdk"
version = "0.1.34"
edition.workspace = true
description = "SDK for the DeepSeek Computer Hub: connection pool, transparent reconnect, tool harness, and tool-server runtime."

[features]
metrics = ["dep:prometheus"]

[dependencies]
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
http = { workspace = true }
prometheus = { workspace = true, optional = true }
reqwest = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

fastrace = { workspace = true }
# Trace donation: spans convert via the stock fastrace -> OTel reporter
# and ship as standard OTLP payloads.
fastrace-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }

ds-tool-protocol = { workspace = true }
ds-tool-runtime = { workspace = true }
ds-tool-types = { workspace = true }
ds-computer-hub-core = { workspace = true }
ds-tracing = { workspace = true }

# Integration tests that need heavier backend deps live in a separate sibling crate to keep this dev-dep set minimal.
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
axum = { workspace = true, features = ["ws", "macros"] }
chrono = { workspace = true }
base64 = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
