[package]
license = "Apache-2.0"
name = "ds-tool-protocol"
version = "0.1.3"
edition.workspace = true
description = "Wire-protocol types for the DeepSeek Computer Hub"

[dependencies]
ds-tool-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
